# BAO_Portfolio-Optimization-Problem

./: .gitignore  README.md  compare_results.ipynb  main.ipynb  manage.py  manager.py  prepare_df.py  pyproject.toml  requirements.txt  run_ga_experiments.ipynb  run_pso_experiments.ipynb
docs/: README_DATASET.md  README_DEV.md  README_GIT.md
experiments/: __init__py  compare_ga_pso.py  experiment_loader.py  fine_tuning.py  generate_experiments.py  tuning_loader.py
experiments/configurations/: README.md
experiments/ga/: ga_experiment_executor.py
experiments/hyperparameters/: __init__.py
experiments/problem/: compare_ga_pso.py  experiment_executor.py
experiments/pso/: pso_experiment_executor.py
experiments/results/: algo_name_fix.py  final_fine_tuning_results.csv
experiments/subdatasets/: high_100_companies.csv  high_200_companies.csv  low_100_companies.csv  low_20_companies.csv  medium_10_companies.csv  medium_200_companies.csv  medium_20_companies.csv
manager/: __main__.py
notebooks/: compare_results.ipynb  fine_tuning_experiments.ipynb  run_experiments.ipynb  run_ga_experiments.ipynb  run_pso_experiments.ipynb
pop/: __init__.py  __main__.py  cli.py  compare_ga_pso.py  fine_tuning.py  portfolio_optimization.py  runner.py
pop/algorithms/: __init__.py  ga_portfolio_optimization.py  pso_portfolio_optimization.py
pop/benchmarks/: __init__.py  portfolio_optimization.py
pop/dataset/: __init__.py  dataset_manager.py  download.py  generate_subdatasets.py
src/: __main__.py  cli.py  run.py
try/: download_NASDAQ_HISTORICAL_DATA.ipynb
(+637 files in other folders)
